Добавлены тесты